--- a/17.3_activities/02_Positioning_Relative_Absolute/unsolved/css/index.css
+++ b/17.3_activities/02_Positioning_Relative_Absolute/unsolved/css/index.css
@@ -15,17 +15,24 @@ body {
   padding: 30px;
   margin: 10px;
   display: flex;
+  position:relative;
 }
 .absolute {
   height: 150px;
   width: 150px;
   background-color: red;
   color: white;
+  position:absolute;
+  bottom:0px;
+  right:0px;
 
 }
 .fixed {
   height: 200px;
   width: 200px;
   background-color: green;
+  position:fixed;
+  bottom:0;
+  right:0;
 
 }
